# astrbot_plugin_telegram_summary

./: .gitignore  CHANGELOG.md  LICENSE  README.md  _conf_schema.json  bot_session.session  extract_changelog.py  main.py  metadata.yaml  pyproject.toml  requirements.txt  session_name.session
.github/workflows/: release.yml
.sakura/: SAKURA.md
.sakura/memory/: 2026-05-16_PR2_0b220e9.md
