[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrbot_plugin_telegram_summary"
version = "1.0.0"
authors = [
    { name = "Sakura520222" },
]
description = "一个 Telegram 频道消息汇总插件，生成指定频道的消息汇总报告"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    # 这里可以从requirements.txt中导入依赖
]

[project.urls]
"Homepage" = "https://github.com/Sakura520222/astrbot_plugin_telegram_summary"
"Repository" = "https://github.com/Sakura520222/astrbot_plugin_telegram_summary"
